Fix clipping of muni-name in page-nav
Remove 'overflow: hidden'

--- a/scorecard/static/stylesheets/scorecard.scss
+++ b/scorecard/static/stylesheets/scorecard.scss
@@ -369,7 +369,6 @@ blockquote {
   transition: all 0.5s ease;
   .page-nav-info {
     max-height: 0;
-    overflow: hidden;
     transition: all 0.5s ease;
   }
   .page-nav-info .muni-name, .page-nav-info .muni-population {
